deploy: 1a85fa7b2272e7153403a0c66de49409f4358ef2

--- a/tei2025/index.html
+++ b/tei2025/index.html
@@ -114,25 +114,32 @@
 <blockquote>
 <p>Crossing the divide between richly encoded XML sources and tangible, published digital edition has always been a weak spot for TEI community. The <strong>TEI Simple</strong> project aimed to bridge that gap with TEI Processing Model idea.</p>
 </blockquote>
+<p><a href="https://github.com/eeditiones/workshop/blob/master/2025-09_tei-conference-2025.md">GitHub page</a></p>
 <h5 id="workshop%3A-jinks-%2F-tei-publisher-10" tabindex="-1">Workshop: Jinks / TEI Publisher 10</h5>
 <p><em>Magdalena Turska (e-editiones), <a href="https://www.conftool.pro/tei2025/index.php?page=browseSessions&amp;print=embed&amp;form_session=33&amp;presentations=show">Tuesday, 16/Sept/2025 2:30pm - 6:00pm at Collegium Paderevianum 402</a></em></p>
 <blockquote>
 <p>TEI Publisher 10 is also the 10th, anniversary edition and it marks a decade since the first Publisher presentation (and our first workshop) at the TEI conference in Lyon. The Jinks application is an edition builder to create, tailor and update editions to your needs in minutes.</p>
 </blockquote>
+<p><a href="https://github.com/eeditiones/workshop/blob/master/2025-09-krakow.md">GitHub page</a></p>
 <h5 id="long-paper%3A-haute-couture-for-the-masses" tabindex="-1">Long Paper: Haute couture for the masses</h5>
 <p><em>Magdalena Turska (e-editiones), Wednesday, 17/Sept/2025 09:30am - 10:00am at Collegium Paderevianum 505</em></p>
+<p><a href="https://bit.ly/haute-couture-2025">Presentation</a></p>
 <h5 id="long-paper%3A-from-practice-to-framework%3A-model-digital-scholarly-editions-in-the-jagiellonian-digital-platform" tabindex="-1">Long Paper: From Practice to Framework: Model Digital Scholarly Editions in the Jagiellonian Digital Platform</h5>
 <p><em>M. E. Komorowska, I. Grabska-Gradzińska, J. Hałaczkiewicz (Jagiellonian University), Wednesday, 17/Sept/2025 10:00am - 10:30am at Collegium Paderevianum 505</em></p>
 <h5 id="short-paper%3A-differentiating-odds" tabindex="-1">Short Paper: Differentiating ODDs</h5>
 <p><em>S. Bauman (Northeastern University, United States of America), H. Bermúdez Sabel (JinnTec), M. Holmes (University of Victoria, Canada), Thursday, 18/Sept/2025 09:30am - 09:45am at Collegium Paderevianum 505</em></p>
 <h5 id="long-paper%3A-converting-data-from-czech-digital-libraries-to-tei" tabindex="-1">Long Paper: Converting data from Czech digital libraries to TEI</h5>
 <p><em>B. Lehečka (Moravian Library in Brno, Czech Republic), Thursday, 18/Sept/2025 09:45am - 10:15am at Collegium Paderevianum 505</em></p>
+<p><a href="https://www.daliboris.cz/materials/tei/2025/Lehecka-Converting-to-TEI-2025-09-18.pdf">Presentation</a>)</p>
 <h5 id="demonstration%3A-jinntap%3A-a-browser-based-tei-xml-editor" tabindex="-1">Demonstration: JinnTap: A browser-based TEI-XML editor</h5>
 <p><em>W. Meier (e-editiones, Heidelberger Akademie der Wissenschaften, JinnTec), L. Windauer (e-editiones, JinnTec), J. Wicentowski (Office of the Historian, USA), Thursday, 18/Sept/2025 10:45am - 11:00am at Collegium Paderevianum 505</em></p>
 <h5 id="short-paper%3A-structures-and-tools-for-the-representation-and-visualization-of-knowledge-contained-in-electronic-editions%2Ftextual-resources" tabindex="-1">Short Paper: Structures and Tools for the Representation and Visualization of Knowledge Contained in Electronic Editions/Textual Resources</h5>
 <p><em>I. Grabska-Gradzińska (Jagiellonian University, Poland), Friday, 19/Sept/2025 09:45am - 10:00am at Collegium Paderevianum 402</em></p>
 <h5 id="demonstration%3A-enriching-textual-data-from-digital-libraries" tabindex="-1">Demonstration: Enriching textual data from digital libraries</h5>
 <p><em>B. Lehečka (Moravian Library in Brno, Czech Republic), Friday, 19/Sept/2025 10:15am - 10:30am at Collegium Paderevianum 402</em></p>
+<p><a href="https://www.daliboris.cz/materials/tei/2025/Lehecka-Enriching-DL-2025-09-19.pdf">Presentation</a></p>
+<h3 id="zenodo-community-for-the-25th-annual-meeting-of-the-text-encoding-initiative%2C-krak%C3%B3w-2025" tabindex="-1">Zenodo community for the 25th Annual Meeting of the Text Encoding Initiative, Kraków 2025</h3>
+<p><a href="https://zenodo.org/communities/tei2025">link</a></p>
 <h3 id="%F0%9F%93%93-editions-with-future" tabindex="-1">📓 Editions with Future</h3>
 <p>Read more about <a href="/join">e-editiones and TEI Publisher</a>.</p>
 
