deploy: a41c185329cd9017ca3e9c7261e1178e77048265

--- a/tei2025/index.html
+++ b/tei2025/index.html
@@ -103,12 +103,14 @@
             <table>
     <tr>
         <td width="50%"><img src="/img/tei2025-new-territories.png" alt="This re-mix image was done by L. Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/ Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/. The 'new territories' logo was done by Patrycja Wojkowska." width="100%"/></td>
-        <td width="50%">
-            From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting <a href="https://tei2025.confer.uj.edu.pl/">TEI2025 - New Territories</a> in <a href="https://www.openstreetmap.org/relation/2768922">Kraków, Poland 🇵🇱</a> at the <a href="https://www.uj.edu.pl/">Jagiellonian University</a>. <br/>
-            Below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an <a href="mailto:info@e-editiones.org">email</a>.
+        <td width="50%" style="vertical-align:top;">
+            From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting <a href="https://tei2025.confer.uj.edu.pl/">TEI2025 - New Territories</a> in <a href="https://www.openstreetmap.org/relation/2768922">Kraków, Poland 🇵🇱</a> at the <a href="https://www.uj.edu.pl/">Jagiellonian University</a>.
         </td>
     </tr>
 </table>
+<div style="align:top">
+Below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an <a href="mailto:info@e-editiones.org">email</a>.
+</div>
 <h5 id="workshop%3A-tei-processing-model" tabindex="-1">Workshop: TEI Processing Model</h5>
 <p><em>Helena Bermúdez Sabel (JinnTec), Magdalena Turska (e-editiones), <a href="https://www.conftool.pro/tei2025/index.php?page=browseSessions&amp;print=embed&amp;form_session=32&amp;presentations=show">Tuesday, 16/Sept/2025 9:30am - 11:00am at Collegium Paderevianum 402</a></em></p>
 <blockquote>
@@ -130,9 +132,10 @@
 <p><em>S. Bauman (Northeastern University, United States of America), H. Bermúdez Sabel (JinnTec), M. Holmes (University of Victoria, Canada), Thursday, 18/Sept/2025 09:30am - 09:45am at Collegium Paderevianum 505</em></p>
 <h5 id="long-paper%3A-converting-data-from-czech-digital-libraries-to-tei" tabindex="-1">Long Paper: Converting data from Czech digital libraries to TEI</h5>
 <p><em>B. Lehečka (Moravian Library in Brno, Czech Republic), Thursday, 18/Sept/2025 09:45am - 10:15am at Collegium Paderevianum 505</em></p>
-<p><a href="https://www.daliboris.cz/materials/tei/2025/Lehecka-Converting-to-TEI-2025-09-18.pdf">Presentation</a>)</p>
+<p><a href="https://www.daliboris.cz/materials/tei/2025/Lehecka-Converting-to-TEI-2025-09-18.pdf">Presentation</a></p>
 <h5 id="demonstration%3A-jinntap%3A-a-browser-based-tei-xml-editor" tabindex="-1">Demonstration: JinnTap: A browser-based TEI-XML editor</h5>
 <p><em>W. Meier (e-editiones, Heidelberger Akademie der Wissenschaften, JinnTec), L. Windauer (e-editiones, JinnTec), J. Wicentowski (Office of the Historian, USA), Thursday, 18/Sept/2025 10:45am - 11:00am at Collegium Paderevianum 505</em></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SpE1bg6OmwE?si=LnaXdzwlUfT10Tsa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h5 id="short-paper%3A-structures-and-tools-for-the-representation-and-visualization-of-knowledge-contained-in-electronic-editions%2Ftextual-resources" tabindex="-1">Short Paper: Structures and Tools for the Representation and Visualization of Knowledge Contained in Electronic Editions/Textual Resources</h5>
 <p><em>I. Grabska-Gradzińska (Jagiellonian University, Poland), Friday, 19/Sept/2025 09:45am - 10:00am at Collegium Paderevianum 402</em></p>
 <h5 id="demonstration%3A-enriching-textual-data-from-digital-libraries" tabindex="-1">Demonstration: Enriching textual data from digital libraries</h5>
