--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -115,7 +115,8 @@
 <li><a href="https://www.stiftsbezirk.ch/de/stiftsbibliothek/">Stiftsbibliothek St.Gallen</a></li>
 <li><a href="https://www.eisenbibliothek.ch/">Stiftung Eisenbibliothek</a>, Klostergut Paradies, Schlatt TG</li>
 <li><a href="https://www.archives-online.org">Trägerschaft Archives Online</a></li>
-<li><a href="https://www.virtuelle-lebenswelten.de/forschung/wissen">Virtuelle Texts (SFB 1567 / B04)</a>, Universität Bochum</li>
+<li><a href="https://www.virtuelle-lebenswelten.de/forschung/wissen">Virtuelle Texte (SFB 1567 / B04)</a>, Universität Bochum</li>
+<li><a href="https://www.zb.uzh.ch/de">Zentralbibliothek Zürich</a></li>
 <li><a href="https://www.zde.uzh.ch">Zentrum Digitale Editionen &amp; Editionsanalytik</a>, Universität Zürich</li>
 <li><a href="http://existsolutions.com/">eXist Solutions GmbH</a>, Lenzkirch/Berlin</li>
 </ul>
