deploy: 643b775dbd21af8de05dff305c02a7e565495d91

--- a/pages/get-in-touch/index.html
+++ b/pages/get-in-touch/index.html
@@ -113,8 +113,8 @@
 </ul>
 <p>The board will treat communications in the <code>#members</code> channel with a higher priority.</p>
 <p>Please join the <a href="https://join.slack.com/t/e-editiones/shared_invite/zt-e19jc03q-OFaVni~_lh6emSHen6pswg">slack workspace</a>.</p>
-<h2 id="mastodon%2C-twitter-and-linkedin" tabindex="-1">Mastodon, Twitter and LinkedIn</h2>
-<p>We will post news via our <a href="https://social.e-editiones.org/@eeditiones">Mastodon</a>, <a href="https://twitter.com/EEditiones">Twitter account</a> and <a href="https://www.linkedin.com/company/e-editiones/">LinkedIn</a> accounts. If you would like to share something about a project or forthcoming events, please contact the e-editiones board or mention us on the according platform so we can reshare.</p>
+<h2 id="mastodon%2C-linkedin%2C-bluesky%2C-instagramm" tabindex="-1">Mastodon, LinkedIn, Bluesky, Instagramm</h2>
+<p>We will post news via our <a href="https://social.e-editiones.org/@eeditiones">Mastodon</a>, <a href="https://www.linkedin.com/company/e-editiones/">LinkedIn</a>, <a href="https://bsky.app/profile/e-editiones.bsky.social">Bluesky</a> and <a href="https://www.instagram.com/eeditiones/">Instgramm</a> accounts. If you would like to share something about a project or forthcoming events, please contact the e-editiones board or mention us on the according platform so we can reshare.</p>
 <h2 id="github" tabindex="-1">GitHub</h2>
 <p>You can find the source code of the TEI Publisher and many examples on <a href="https://github.com/eeditiones">GitHub</a>.</p>
 <h2 id="youtube" tabindex="-1">YouTube</h2>
@@ -126,7 +126,7 @@
         
         <aside class="col-lg-3 col-md-3">
             <nav class="toc" >
-        <ul><li><a href="#mailing-list">Mailing List</a></li><li><a href="#slack-community">Slack Community</a></li><li><a href="#mastodon%2C-twitter-and-linkedin">Mastodon, Twitter and LinkedIn</a></li><li><a href="#github">GitHub</a></li><li><a href="#youtube">YouTube</a></li><li><a href="#zenodo">Zenodo</a></li></ul>
+        <ul><li><a href="#mailing-list">Mailing List</a></li><li><a href="#slack-community">Slack Community</a></li><li><a href="#mastodon%2C-linkedin%2C-bluesky%2C-instagramm">Mastodon, LinkedIn, Bluesky, Instagramm</a></li><li><a href="#github">GitHub</a></li><li><a href="#youtube">YouTube</a></li><li><a href="#zenodo">Zenodo</a></li></ul>
       </nav>
         </aside>
         
