--- a/pages/how-to-contribute/index.html
+++ b/pages/how-to-contribute/index.html
@@ -120,7 +120,7 @@
 <h2 id="tei-examples" tabindex="-1">TEI Examples</h2>
 <p>To make the TEI Publisher as versatile as possible we are looking for TEI examples which can be used for development, tests and also for teaching. Create new or enhance existing example documents and ODDs so we present showcases for various TEI applications. The collection is hosted on <a href="https://github.com/eeditiones/tei-examples">GitHub</a>.</p>
 <h2 id="tell-people-about-us" tabindex="-1">Tell people about us</h2>
-<p>Follow us on <a href="https://social.e-editiones.org/deck/@eeditiones">Mastodon</a>, <a href="https://www.linkedin.com/company/e-editiones/">LinkedIn</a> and <a href="http://www.twitter.com/EEditiones">Twitter</a>. Repost and like related posts.</p>
+<p>Follow us on <a href="https://social.e-editiones.org/deck/@eeditiones">Mastodon</a>, <a href="https://www.linkedin.com/company/e-editiones/">LinkedIn</a>, <a href="https://bsky.app/profile/e-editiones.bsky.social">Bluesky</a> and <a href="https://www.instagram.com/eeditiones/">Instgramm</a>. Repost and like related posts.</p>
 <p>We'll be grateful for credit on your project page, so just grab the most fitting logo from <a href="https://github.com/eeditiones/logos">GitHub</a>. If you are a already a member of e-editiones you are especially encouraged to use our member logo.</p>
 
         </div>
