deploy: 576567a4067a8d35a75dc50acd1d46c5bbb4f8d4

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -104,6 +104,7 @@
 <ul>
 <li><a href="https://www.dh.unibe.ch/">Digital Humanities</a>/<a href="https://www.wbkolleg.unibe.ch/">Walter Benjamin Kolleg</a> der Universität Bern</li>
 <li><a href="https://www.sdu.dk/en/forskning/hca">The Hans Christian Andersen Centre</a>, University of Southern Denmark</li>
+<li><a href="https://www.hisoma.mom.fr/">HISOMA-CNRS-Université Lyon 2</a></li>
 <li><a href="https://isllv.zrc-sazu.si/en/predstavitev#v">Institute of Slovenian Literature and Literary studies</a>, Research Centre of the Slovenian Academy of Sciences and Arts, Ljubljana</li>
 <li><a href="https://karlbarth.unibas.ch/de/">Karl Barth-Stiftung</a>, Basel</li>
 <li><a href="https://www.kgparl.de">Kommission für Geschichte des Parlamentarismus und der politischen Parteien e.V.</a></li>
