deploy: 41cd91f3068383ea09a9ab4d0d0340bf0ea19b96

--- a/pages/board/index.html
+++ b/pages/board/index.html
@@ -102,11 +102,10 @@
             <h1>Board</h1>
             <ul>
 <li>Dr. <a href="https://k-r.ch">Andreas Kränzle</a>, <a href="https://karlbarth.unibas.ch/de/">Karl Barth-Archiv</a>, Basel</li>
-<li>Dr. Pascale Sutter, <a href="https://www.ssrq-sds-fds.ch/home/">Rechtsquellenstiftung des Schweizerischen Juristenvereins</a></li>
 <li>Dr. des. Anne Diekjobst, Gottfried Wilhelm Leibniz Bibliothek</li>
 <li>Wolfgang Meier, <a href="http://existsolutions.com/index.html">eXist Solutions GmbH</a>, Lenzkirch/Berlin, Heidelberger Akademie der Wissenschaften, Heidelberg</li>
 <li><a href="https://english.northwestern.edu/people/faculty/emeritus/martin-mueller.html">Prof. em. Dr. Martin Mueller</a>, North Western University, Deparment of English</li>
-<li>Dr. des. Roberta Padlina, Data Scientist, <a href="https://www.memoriav.ch/">Memoriav</a></li>
+<li>Dr. des. Roberta Padlina, Assistant Professor, <a href="https://www.unige.ch/lettres/philo/collaborateurs/professeurs/roberta-padlina">Département de Philosophie, Université de Genève</a></li>
 </ul>
 <h2 id="contact" tabindex="-1">Contact</h2>
 <p><a href="mailto:info@e-editiones.org">info@e-editiones.org</a></p>
