deploy: e15aa33ef5c0189ce8d771452280dfb89f6b66f1

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -123,6 +123,7 @@
 <h2 id="individual-members" tabindex="-1">Individual Members</h2>
 <ul>
 <li><a href="https://newtfire.org">Elisa Beshero-Bondar</a>, PhD, Program Chair of Digital Media, Arts, and Technology Professor of Digital Humanities | Director of the <a href="https://sites.psu.edu/psudhlab/">Digital Humanities Lab at Penn State Erie</a>, the Behrend College, Member of the TEI Technical Council</li>
+<li><a href="https://www.huygens.knaw.nl/en/medewerkers/peter-boot-2/">Peter Boot</a>, Senior researcher, Huygens Institute, Amsterdam</li>
 <li>Albert Brugnara, Wien <a href="https://www.brugnara.at">Tibetan TEI</a></li>
 <li><a href="https://hcommons.org/members/pibburns/">Philip R. «Pib» Burns</a>, Senior Developer, Research Computing Services Northwestern University</li>
 <li>Giuliano Di Bacco, PhD, music historian and medievalist, director of the <a href="https://chmtl.indiana.edu/hmt/index.html">Resources and Studies for the History of Music Theory</a> (CHMTL, Indiana University Bloomington), including the <a href="https://chmtl.indiana.edu/tml/">Thesaurus Musicarum Latinarum</a></li>
