deploy: d9ba3ef2ea6d3850ff50d855591eca0418efb3fc

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -121,11 +121,13 @@
 <li><a href="http://existsolutions.com/">eXist Solutions GmbH</a>, Lenzkirch/Berlin</li>
 </ul>
 <h2 id="individual-members" tabindex="-1">Individual Members</h2>
+<!-- [Elisa Beshero-Bondar](https://newtfire.org), PhD, Program Chair of Digital Media, Arts, and Technology Professor of Digital Humanities | Director of the [Digital Humanities Lab at Penn State Erie](https://sites.psu.edu/psudhlab/), the Behrend College, Member of the TEI Technical Council-->
 <ul>
-<li><a href="https://newtfire.org">Elisa Beshero-Bondar</a>, PhD, Program Chair of Digital Media, Arts, and Technology Professor of Digital Humanities | Director of the <a href="https://sites.psu.edu/psudhlab/">Digital Humanities Lab at Penn State Erie</a>, the Behrend College, Member of the TEI Technical Council</li>
 <li><a href="https://www.huygens.knaw.nl/en/medewerkers/peter-boot-2/">Peter Boot</a>, Senior researcher, Huygens Institute, Amsterdam</li>
 <li>Albert Brugnara, Wien <a href="https://www.brugnara.at">Tibetan TEI</a></li>
-<li><a href="https://hcommons.org/members/pibburns/">Philip R. «Pib» Burns</a>, Senior Developer, Research Computing Services Northwestern University</li>
+</ul>
+<!-- [Philip R. «Pib» Burns](https://hcommons.org/members/pibburns/), Senior Developer, Research Computing Services Northwestern University-->
+<ul>
 <li>Giuliano Di Bacco, PhD, music historian and medievalist, director of the <a href="https://chmtl.indiana.edu/hmt/index.html">Resources and Studies for the History of Music Theory</a> (CHMTL, Indiana University Bloomington), including the <a href="https://chmtl.indiana.edu/tml/">Thesaurus Musicarum Latinarum</a></li>
 <li><a href="https://www.histsem.uni-kiel.de/de/das-institut-1/abteilungen/professur-fuer-geschichte-des-spaeten-mittelalters-sowie-wirtschafts-und-sozialgeschichte/team/anne-diekjobst">Anne Diekjobst</a>, Dr. des., Christian-Albrechts-Universität zu Kiel, u.a. Edition des Zinsrodels des Klosters Feldbach</li>
 <li><a href="https://daw.philhist.unibas.ch/de/personen/rita-gautschy">Rita Gautschy</a>, Dr., Privatdozentin an der Universität Basel, Direktorin des <a href="https://www.dasch.swiss/our-team">Swiss National Data and Service Center for the Humanities (DaSCH)</a></li>
