--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -125,7 +125,7 @@
 <li><a href="https://www.huygens.knaw.nl/en/medewerkers/peter-boot-2/">Peter Boot</a>, Senior researcher, Huygens Institute, Amsterdam</li>
 <li>Albert Brugnara, Wien <a href="https://www.brugnara.at">Tibetan TEI</a></li>
 <li>Giuliano Di Bacco, PhD, music historian and medievalist, director of the <a href="https://chmtl.indiana.edu/hmt/index.html">Resources and Studies for the History of Music Theory</a> (CHMTL, Indiana University Bloomington), including the <a href="https://chmtl.indiana.edu/tml/">Thesaurus Musicarum Latinarum</a></li>
-<li><a href="https://www.histsem.uni-kiel.de/de/das-institut-1/abteilungen/professur-fuer-geschichte-des-spaeten-mittelalters-sowie-wirtschafts-und-sozialgeschichte/team/anne-diekjobst">Anne Diekjobst</a>, Dr. des., Christian-Albrechts-Universität zu Kiel, u.a. Edition des Zinsrodels des Klosters Feldbach</li>
+<li>Anne Diekjobst, Fachreferentin, Universitäts- und Landesbibliothek Bonn</li>
 <li><a href="https://daw.philhist.unibas.ch/de/personen/rita-gautschy">Rita Gautschy</a>, Dr., Privatdozentin an der Universität Basel, Direktorin des <a href="https://www.dasch.swiss/our-team">Swiss National Data and Service Center for the Humanities (DaSCH)</a></li>
 <li>Sulamith Gehr, <a href="https://ub.unibas.ch/bernoulli/index.php/Hauptseite">Basler Edition der Bernoulli-Briefwechsel</a></li>
 <li><a href="https://ifaa.uni-greifswald.de/hansen/">Mascha Hansen</a>, Dr., Lecturer, Department of British and North American Studies (IfAA), University of Greifswald</li>
