deploy: ffc333ff810eed08092c2186b0a2372f7f4f14b6

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -122,7 +122,7 @@
 </ul>
 <h2 id="individual-members" tabindex="-1">Individual Members</h2>
 <ul>
-<li><a href="https://www.huygens.knaw.nl/en/medewerkers/peter-boot-2/">Peter Boot</a>, Senior researcher, Huygens Institute, Amsterdam</li>
+<li><a href="https://www.huygens.knaw.nl/en/medewerkers/peter-boot-2/">Peter Boot</a>, Senior researcher, Huygens Institute, Amsterdam, eDITem[<a href="https://gitlab.huc.knaw.nl/eDITem">https://gitlab.huc.knaw.nl/eDITem</a>] and Edition Publication Model[<a href="https://gitlab.huc.knaw.nl/edition-publication-model/edition-publication-model">https://gitlab.huc.knaw.nl/edition-publication-model/edition-publication-model</a>]</li>
 <li>Albert Brugnara, Wien <a href="https://www.brugnara.at">Tibetan TEI</a></li>
 <li>Giuliano Di Bacco, PhD, music historian and medievalist, director of the <a href="https://chmtl.indiana.edu/hmt/index.html">Resources and Studies for the History of Music Theory</a> (CHMTL, Indiana University Bloomington), including the <a href="https://chmtl.indiana.edu/tml/">Thesaurus Musicarum Latinarum</a></li>
 <li>Anne Diekjobst, Fachreferentin, Universitäts- und Landesbibliothek Bonn</li>
