deploy: 92a021d13cf67a0b9209c4f1959100e4337a6ce2

--- a/page-list/8/index.html
+++ b/page-list/8/index.html
@@ -183,84 +183,8 @@
   </thead>
   <tbody>
   <tr>
-    <td><a href="/posts/tei-publisher-4/"><code>/posts/tei-publisher-4/</code></a></td>
-    <td>TEI Publisher 4.0</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/tei-publisher-41/"><code>/posts/tei-publisher-41/</code></a></td>
-    <td>TEI Publisher 4.1.0</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/tei-publisher-5/"><code>/posts/tei-publisher-5/</code></a></td>
-    <td>TEI Publisher 5.0.0</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/home/"><code>/pages/home/</code></a></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td><a href="/posts/embeding-tei-publisher-components/"><code>/posts/embeding-tei-publisher-components/</code></a></td>
-    <td>TEI Publisher Components in Wordpress</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/tei-publisher-502/"><code>/posts/tei-publisher-502/</code></a></td>
-    <td>TEI Publisher 5.0.2</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/first-community-event-on-may-18th-2020/"><code>/posts/first-community-event-on-may-18th-2020/</code></a></td>
-    <td>First Community Event on May 18th 2020</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/board/"><code>/pages/board/</code></a></td>
-    <td>Board</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/community/"><code>/pages/community/</code></a></td>
-    <td>Community</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/how-to-become-a-member/"><code>/pages/how-to-become-a-member/</code></a></td>
-    <td>How to join</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/"><code>/pages/</code></a></td>
-    <td>Board</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/members/"><code>/pages/members/</code></a></td>
-    <td>Members</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/statuten-des-vereins-e-editiones-german/"><code>/pages/statuten-des-vereins-e-editiones-german/</code></a></td>
-    <td>Statuten des Vereins e-editiones (German)</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/strategy/"><code>/pages/strategy/</code></a></td>
-    <td>Strategy</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/stay-home-learn-tei-publisher-from-scratch-june-2020/"><code>/posts/stay-home-learn-tei-publisher-from-scratch-june-2020/</code></a></td>
-    <td>«Stay Home Learn TEI Publisher From Scratch»</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/meeting-minutes/"><code>/pages/meeting-minutes/</code></a></td>
-    <td>Meeting Minutes</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/get-in-touch/"><code>/pages/get-in-touch/</code></a></td>
-    <td>Get in Touch</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/getting-started/"><code>/pages/getting-started/</code></a></td>
-    <td>Getting Started</td>
-  </tr>
-  <tr>
-    <td><a href="/pages/how-to-contribute/"><code>/pages/how-to-contribute/</code></a></td>
-    <td>How to Contribute</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/community-event-on-music-encoding/"><code>/posts/community-event-on-music-encoding/</code></a></td>
-    <td>Community Event on Music Encoding</td>
+    <td><a href="/tags/markdown/"><code>/tags/markdown/</code></a></td>
+    <td>Tagged “markdown”</td>
   </tr>
   </tbody>
 </table>
@@ -670,7 +594,7 @@
         const rellax = new Rellax('.banner');
     });
 </script>
-<!-- Current page: /page-list/ -->
+<!-- Current page: /page-list/8/ -->
 
       <script src="/assets/scripts/bootstrap.bundle.min.js"></script>
       <script src="/assets/scripts/common.js"></script>
