deploy: a25403f2e054824d20bfeb79bfb9c12b61886b4c

--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -104,8 +104,16 @@
 <p>Teams: [LINK not yet there]</p>
 <ul>
 <li>Invitation/Agenda (german)</li>
-<li>[ad 3] Protokoll der Sitzung vom 16.1.2025 (german) <a href="/resources/2026/Protokoll der 5. GV e-editiones.pdf">Protokoll der 5. GV e-editiones</a></li>
-<li>[ad 5] Annual Accounts 2025 <a href="/resources/2026/e-editiones-gewinn-und-verlust-2025.pdf">PDF</a>), bilance <a href="/resources/2026/e-editiones-bilanz-2025.pdf">PDF</a>  <a href="/resources/2026/e-editiones-postfinance-2025.pdf">Postfinance 2025</a>, <a href="/resources/2026/e-editiones-paypal-2025.pdf">Paypal 2025</a> revision <a href="/resources/2026/Revisionsbericht_e_editiones_2025.pdf">PDF</a></li>
+<li>[ad 3] Protokoll der Sitzung vom 16.1.2025 (german) <a href="/resources/2026/Protokoll der 5. GV e-editiones.pages.pdf">Protokoll der 5. GV e-editiones</a></li>
+<li>[ad 5]
+<ul>
+<li><a href="/resources/2026/e-editiones-gewinn-und-verlust-2025.pdf">Annual Accounts 2025</a></li>
+<li><a href="/resources/2026/e-editiones-bilanz-2025.pdf">Bilance</a></li>
+<li><a href="/resources/2026/e-editiones-postfinance-2025.pdf">Postfinance 2025</a></li>
+<li><a href="/resources/2026/e-editiones-paypal-2025.pdf">Paypal 2025</a></li>
+<li><a href="/resources/2026/Revisionsbericht_e_editiones_2025.pdf">Revision</a></li>
+</ul>
+</li>
 <li>[ad 6] <a href="/resources/2026/e-editiones-budget_2026.pdf">Budget 2026</a></li>
 </ul>
 <h3 id="assembly-2025-1st-april-2025-(16-h-cest)" tabindex="-1">Assembly 2025 1st April 2025 (16 h CEST)</h3>
