--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -100,7 +100,7 @@
     <div class="row gx-lg-5 gx-2">
         <div class="col-lg-9 col-md-9">
             <h1>Meeting Minutes</h1>
-            <h3 id="assembly-2026-2nd-march-2026-(16-h-cest)" tabindex="-1">Assembly 2026 2nd March 2026 (16 h CEST)</h3>
+            <h3 id="assembly-2026-3rd-march-2026-(16-h-cest)" tabindex="-1">Assembly 2026 3rd March 2026 (16 h CEST)</h3>
 <p>Teams: [LINK not yet there]</p>
 <ul>
 <li>Invitation/Agenda (german)</li>
@@ -116,7 +116,7 @@
 </li>
 <li>[ad 6] <a href="/resources/2026/e-editiones-budget_2026.pdf">Budget 2026</a></li>
 </ul>
-<h3 id="assembly-2025-1st-april-2025-(16-h-cest)" tabindex="-1">Assembly 2025 1st April 2025 (16 h CEST)</h3>
+<h3 id="assembly-2025-3rd-april-2025-(16-h-cest)" tabindex="-1">Assembly 2025 3rd April 2025 (16 h CEST)</h3>
 <p>Teams: <a href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZWNkNTI1MDEtYjhmMi00NTg4LWEyMTgtNDY0YzUyMTYwMjA0%40thread.v2/0?context=%7b%22Tid%22%3a%22bd21f2e9-9af5-42a1-8caf-eb264278467f%22%2c%22Oid%22%3a%22a95e8e6b-7512-4d5d-ba06-899e4e51d145%22%7d">Link</a></p>
 <p>Join conversation</p>
 <ul>
@@ -182,7 +182,7 @@
         
         <aside class="col-lg-3 col-md-3">
             <nav class="toc" >
-        <ul><li><a href="#assembly-2026-2nd-march-2026-(16-h-cest)">Assembly 2026 2nd March 2026 (16 h CEST)</a></li><li><a href="#assembly-2025-1st-april-2025-(16-h-cest)">Assembly 2025 1st April 2025 (16 h CEST)</a></li><li><a href="#assembly-2024-16th-april-2024-(16-h-cest)">Assembly 2024 16th April 2024 (16 h CEST)</a></li><li><a href="#assembly-2023-2nd-may-2023-(16-h-cest)">Assembly 2023 2nd May 2023 (16 h CEST)</a></li><li><a href="#assembly-2022-5th-april-2022">Assembly 2022 5th April 2022</a></li><li><a href="#assembly-2021-1st-march-2021">Assembly 2021 1st March 2021</a></li><li><a href="#amendments-to-the-statutes-5th-nov-2020">Amendments to the statutes 5th Nov 2020</a></li><li><a href="#founding-meeting-4th-may-2020">Founding meeting 4th May 2020</a></li></ul>
+        <ul><li><a href="#assembly-2026-3rd-march-2026-(16-h-cest)">Assembly 2026 3rd March 2026 (16 h CEST)</a></li><li><a href="#assembly-2025-3rd-april-2025-(16-h-cest)">Assembly 2025 3rd April 2025 (16 h CEST)</a></li><li><a href="#assembly-2024-16th-april-2024-(16-h-cest)">Assembly 2024 16th April 2024 (16 h CEST)</a></li><li><a href="#assembly-2023-2nd-may-2023-(16-h-cest)">Assembly 2023 2nd May 2023 (16 h CEST)</a></li><li><a href="#assembly-2022-5th-april-2022">Assembly 2022 5th April 2022</a></li><li><a href="#assembly-2021-1st-march-2021">Assembly 2021 1st March 2021</a></li><li><a href="#amendments-to-the-statutes-5th-nov-2020">Amendments to the statutes 5th Nov 2020</a></li><li><a href="#founding-meeting-4th-may-2020">Founding meeting 4th May 2020</a></li></ul>
       </nav>
         </aside>
         
