deploy: f1b7f6ad8dc964513abccbba58ed5b0092f83457

--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -101,9 +101,9 @@
         <div class="col-lg-9 col-md-9">
             <h1>Meeting Minutes</h1>
             <h3 id="assembly-2026-3rd-march-2026-(16-h-cest)" tabindex="-1">Assembly 2026 3rd March 2026 (16 h CEST)</h3>
-<p>Teams: [LINK not yet there]</p>
+<p>Teams: <a href="https://teams.microsoft.com/meet/31669413632411?p=RBqFneqzMJIoMke31W">Join</a></p>
 <ul>
-<li>Invitation/Agenda (german)</li>
+<li>Invitation (german/english) <a href="/resources/2026/Einladung_Traktanden 6. GV e-editiones.pdf">PDF</a></li>
 <li>[ad 3] Protokoll der Sitzung vom 16.1.2025 (german) <a href="/resources/2026/Protokoll der 5. GV e-editiones.pages.pdf">Protokoll der 5. GV e-editiones</a></li>
 <li>[ad 5]
 <ul>
