--- a/join/index.html
+++ b/join/index.html
@@ -101,7 +101,7 @@
         <div class="col-md-8">
             <h1>Editions with Future</h1>
             <blockquote>
-<p><strong>Update: <a href="/dh2024">meet e-editiones at DH2024 in Washington DC, USA</a></strong></p>
+<p><strong>Update: <a href="/dhd2026">meet e-editiones at dHD2026 in Vienna, Austia</a></strong></p>
 </blockquote>
 <h4 id="rooted-in-standards---built-by-the-community---meant-to-last" tabindex="-1">Rooted in standards -  built by the community - meant to last</h4>
 <p>e-editiones is an international non-profit society bringing together edition projects, cultural heritage institutions, scholars, and developers to empower digital projects by promoting open standards and community collaboration— with the ultimate goal of helping to sustain editions far into the future. We</p>
@@ -111,7 +111,7 @@
 <li>organize regular workshops and community meetings.</li>
 </ul>
 <h5 id="join-our-open-community" tabindex="-1">Join our open community</h5>
-<p>Get in contact with us via <a href="mailto:info@e-editiones.org">email</a>, <a href="https://www.e-editiones.org/pages/get-in-touch/#mailing-list">mailing list</a>, <a href="https://social.e-editiones.org/@eeditiones">Mastodon</a>, <a href="https://www.e-editiones.org/pages/get-in-touch/#slack-community">Slack</a>, <a href="https://github.com/eeditiones/">GitHub</a>, <a href="https://www.linkedin.com/company/e-editiones/">LinkedIn</a> or <a href="https://x.com/eeditiones">Twitter</a>.</p>
+<p>Get in contact with us via <a href="mailto:info@e-editiones.org">email</a>, <a href="https://www.e-editiones.org/pages/get-in-touch/#mailing-list">mailing list</a>, <a href="https://social.e-editiones.org/@eeditiones">Mastodon</a>, <a href="https://www.e-editiones.org/pages/get-in-touch/#slack-community">Slack</a>, <a href="https://github.com/eeditiones/">GitHub</a>, <a href="https://www.linkedin.com/company/e-editiones/">LinkedIn</a>.</p>
 <h5 id="become-a-member" tabindex="-1">Become a Member</h5>
 <p>Gain access to our knowledge hub and influence the future of the open-source tools we develop like <a href="https://tei-publisher.org/">TEI Publisher</a> and <a href="https://github.com/eeditiones/roaster?tab=readme-ov-file#roaster">Roaster</a>.</p>
 <p>Get advice for all steps in your edition project life-cycle:</p>
