deploy: 8033346ff70ce46d3959bc2bf8bd31fa866c52f7

--- a/dhd2026/index.html
+++ b/dhd2026/index.html
@@ -175,6 +175,17 @@
 <h5 id="eigener-rechner" tabindex="-1">Eigener Rechner</h5>
 <p>Wer den eigenen Rechner verwenden möchte, kann dies gerne tun.
 Bitte <a href="https://tei-publisher.com/doc/tldr.xml?id=installation#installation">folgt dafür der Installationsanleitung des TEI Publishers</a>. Damit habt ihr alles eingerichtet, was für die Teilnahme am Workshop benötigt wird.</p>
+<h5 id="ressourcen-f%C3%BCr-den-workshop" tabindex="-1">Ressourcen für den Workshop</h5>
+<ul>
+<li><a href="https://raw.githubusercontent.com/eeditiones/workshop/8100af278370ef2a41b686d6e844ee123719f94b/slides/dhd-20260224.pdf">Workshop-Foliensatz (PDF)</a></li>
+<li><a href="https://github.com/eeditiones/workshop/tree/master/images">Bilder für die praktische Übung</a></li>
+<li>TEI Publisher Dokumentation
+<ul>
+<li><a href="https://tei-publisher.com/doc/quickstart.xml">Gentle Introduction to TEI Publisher (Quickstart)</a></li>
+<li><a href="https://tei-publisher.com/doc/documentation.xml">Reference Manual (vollständige Dokumentation)</a></li>
+</ul>
+</li>
+</ul>
 <h5 id="remote-unterst%C3%BCtzung" tabindex="-1">Remote-Unterstützung</h5>
 <p>Aufgrund der hohen Teilnehmer:innenzahl sowie krankheitsbedingter Ausfälle können wir nicht mit so vielen Personen vor Ort in Wien sein, wie wir es gerne wären.</p>
 <p>Um dennoch eine optimale Betreuung der acht Workshopgruppen zu gewährleisten, stehen verschiedene Expert:innen von e-editiones online bereit.</p>
