deploy: 2e56712dad38da70681b7415d73808ee7b4e60a4

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -147,6 +147,7 @@
 <li>Sinai Rusinek, <a href="https://elijahlab.haifa.ac.il/" title="Elijah Lab">Elijah Lab</a>, Haifa University; project leader of TraveLab</li>
 <li>Roman Sigg, <a href="https://www.steinamrhein.ch/xml_1/internet/de/application/d3/d723/d724/f346.cfm">Stadtarchivar Stein am Rhein</a></li>
 <li>Anna Skolimowska, Dr. hab., Head of the <a href="http://fontes.ibi.uw.edu.pl/">Laboratory for Source Editing &amp; Digital Humanities</a>, Faculty of «Artes Liberales», University of Warsaw</li>
+<li>Elisabeth Sünder, Landesbibliothek Oldenburg</li>
 <li><a href="https://uzh.academia.edu/ClaudiaSutter">Claudia Sutter</a>, freie Historikerin, Archivarin, Stein am Rhein, Urbar des Dominikanerinnenklosters St. Katharinen St.Gallen</li>
 <li><a href="https://online.uni-graz.at/kfu_online/wbForschungsportal.cbShowPortal?pPersonNr=80075">Georg Vogeler</a>, Dr. phil., Professor Digital Humanities, Zentrum für Informationsmodellierung, Universität Graz</li>
 <li><a href="https://www.lhlt.mpg.de/wagner/en">Andreas Wagner</a>, Dr., Max Planck Institute for Legal History and Legal Theory</li>
